# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
package(default_visibility = ["//visibility:private"])

cc_library(
    name = "hdrs",
    hdrs = glob([
        "*.c",
        "*.h",
    ],
    exclude = [
        "server.c",
        "client_*.c",
    ]),
)

cc_library(
    name = "src",
    srcs = [
        "server.c",
    ],
    deps = [
        ":hdrs",
    ],
    visibility = ["//visibility:public"],
)
